Add dotenv - Protect my secret data in .env file

--- a/app/assets/stylesheets/pages/_cocktails_index.scss
+++ b/app/assets/stylesheets/pages/_cocktails_index.scss
@@ -1,5 +1,8 @@
-.button-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-};
+.card-img-top {
+  border-radius: 2px;
+}
+
+.card-title {
+  text-align: center;
+}
+
