--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,13 +1,9 @@
 <div>
-  <h1>Add Cocktail !</h1>
-  <%= form_for(@cocktail) do |f| %>
-    <div class=“form-group”>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-    </div>
-
-      <%= f.submit "Add cocktail", class: 'btn btn-primary' %>
-
-  <% end %>
-</div>
+  <h1>Create a Cocktail</h1>
+    <%= simple_form_for @cocktail do |f| %>
+      <%= f.input :name %>
+      <%= f.association :doses %>
+      <%= f.association :ingredients %>
+      <%= f.button :submit %>
+    <% end %>
 <%= link_to "Back to the list", cocktails_path, class: "btn btn-primary" %>
