--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,6 +6,9 @@
  -->
 
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+   <a class="navbar-brand" href="#">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
+  </a>
   <%= link_to root_path, class: "navbar-brand" do %>
   <% end %>
 
@@ -13,22 +16,21 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to 'Cocktails', cocktails_path, class: "nav-link" %>
+        <%= link_to 'Home', cocktails_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <%= link_to "New cocktail", new_cocktail_path, class: "nav-link" %>
+        <%= link_to "Add a new cocktail", new_cocktail_path, class: "nav-link" %>
       </li>
-      <li class="nav-item dropdown">
+     <!--  <li class="nav-item dropdown">
         <%= image_tag "", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Action", "#", class: "dropdown-item" %>
           <%= link_to "Another action", "#", class: "dropdown-item" %>
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
 </div>
