--- a/app/assets/stylesheets/pages/_cocktails_index.scss
+++ b/app/assets/stylesheets/pages/_cocktails_index.scss
@@ -6,3 +6,44 @@
   text-align: center;
 }
 
+body {
+  background-color: white;
+  overflow:scroll;
+}
+
+.ps-cocktails {
+  position:relative;
+  margin-top:40px;
+  border-radius:5px;
+}
+
+.card-title {
+  text-align: center;
+  position: absolute;
+  padding: -36px;
+  margin-top: -245px;
+  margin-left: 135px;
+  color:white;
+  align:center;
+  font-size: 18px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 5px;
+
+}
+
+// img {
+//   height: 200px;
+//   width: 150px;
+// }
+
+.ps-cocktails .btn-dark {
+  position:absolute;
+  margin-top:-233px;
+  margin-left:100px;
+}
+
+#index {
+
+}
+
