--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,13 +4,13 @@
   </nav>
 </div>
  -->
-
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-   <a class="navbar-brand" href="#">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" />
-  </a>
-  <%= link_to root_path, class: "navbar-brand" do %>
-  <% end %>
+  <div class="navbar-collapse">
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "HT.svg", class: "avatar avatar-xs", data: { titi: "toto" } %>
+   <!--  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" /> -->
+      <% end %>
+  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -24,13 +24,6 @@
       <li class="nav-item">
         <%= link_to "Add a new cocktail", new_cocktail_path, class: "nav-link" %>
       </li>
-     <!--  <li class="nav-item dropdown">
-        <%= image_tag "", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "Action", "#", class: "dropdown-item" %>
-          <%= link_to "Another action", "#", class: "dropdown-item" %>
-        </div>
-      </li> -->
     </ul>
   </div>
 </div>
