--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,7 +1,4 @@
-<!--
-<%= simple_form_for(cocktail) #do |f| %>
+<%= simple_form_for(cocktail) do |f| %>
+  <%= f.input :photo, as: :file %>
+<% end %>
 
-  <%= f.input #:photo, as: :file %>
-
-<% #end %>
- -->
