--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,19 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+body {
+ background-color: #white;
+ // overflow:scroll;
+}
+
+.btn {
+  color: #fff;
+  background-color: #cb2d6f;
+  border-color: #cb2d6f;
+}
+
+.container {
+  max-width: 1300px;
+}
