--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,17 +1,19 @@
-  <!-- As a heading -->
 <div class="container">
-  <div class="row cocktails-items">
-    <% @cocktails.each do |cocktail| %>
-      <div class="col-2 ps-cocktails">
-        <div class="card-show">
+  <div class="row">
+      <% @cocktails.each do |cocktail| %>
+    <div class="col-6 col-md-3">
+      <div class="ps-cocktails">
         <% if cocktail.photo.attached? %>
-        <%= cl_image_tag cocktail.photo.key%>
+          <%= cl_image_tag cocktail.photo.key %>
         <% else %>
         <% end %>
-        <h5 class="card-title"> <%= cocktail.name %> </h5>
-        </div>
       </div>
-    <%= link_to "Check details", cocktail_path(cocktail), class: "btn btn-dark" %>
-    <% end %>
+      <div class="card-name-details">
+        <h5 class="card-title"> <%= cocktail.name %> </h5>
+        <%= link_to "details", cocktail_path(cocktail), class: "btn btn-dark" %>
+      </div>
+    </div>
+      <% end %>
   </div>
 </div>
+
