--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="navbar-collapse">
     <%= link_to root_path, class: "navbar-brand" do %>
-    <h5 class="header-title"><i class="fas fa-cocktail" id="icon"> </i><em>Handmaid's tail</h5>
+    <h5 class="header-title"><i class="fas fa-cocktail" id="icon"> </i> Handmaid's tail</h5>
    <!--  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" /> -->
       <% end %>
   </div>
